tests/ui/suggestions/deref-path-method.stderr
error[E0599]: `Vec<_, _>` is not an iterator
  --> $DIR/deref-path-method.rs:3:10
   |
LL |     Vec::contains(&vec, &0);
   |          ^^^^^^^^ `Vec<_, _>` is not an iterator
   |
note: if you're trying to build a new `Vec<_, _>` consider using one of the following associated functions:
      Vec::<T>::new
      Vec::<T>::with_capacity
      Vec::<T>::try_with_capacity
      Vec::<T>::from_raw_parts
      and 7 others
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   = note: the following trait bounds were not satisfied:
           `Vec<_, _>: Iterator`
           which is required by `&mut Vec<_, _>: Iterator`
help: the function `contains` is implemented on `[_]`
   |
LL -     Vec::contains(&vec, &0);
LL +     <[_]>::contains(&vec, &0);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
